--- a/onlinetest/package.json
+++ b/onlinetest/package.json
@@ -17,10 +17,12 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "next": "13.1.2",
+    "next-auth": "^4.18.8",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "18.11.18",
     "sass": "^1.57.1"
   }
 }
